# actoris-project

./: .gitignore  Cargo.toml  DEPLOYMENT.md  Dockerfile  Dockerfile.praxis  QUICKSTART.md  docker-compose.yml  fly.toml  railway.json  railway.toml  render.yaml  rust-toolchain.toml
.claude/: settings.local.json
.github/workflows/: docker.yml  go-ci.yml  release.yml  rust-ci.yml
api-gateway/: Cargo.toml  Dockerfile
api-gateway/src/: main.rs
benches/: benchmarks.rs
crates/actoris-common/: Cargo.toml
crates/actoris-common/src/: error.rs  lib.rs
crates/actoris-common/src/crypto/: did.rs  frost.rs  merkle.rs  mod.rs
crates/actoris-common/src/security/: audit.rs  hsm.rs  mod.rs  mtls.rs  policy.rs
crates/actoris-common/src/types/: hc_wallet.rs  mod.rs  outcome_record.rs  pricing.rs  trust_score.rs  unified_id.rs
crates/actoris-darwinian/: Cargo.toml
crates/actoris-darwinian/src/: lib.rs
crates/actoris-darwinian/src/controller/: allocator.rs  mod.rs  pid.rs
crates/actoris-darwinian/src/culling/: mod.rs  policy.rs
crates/actoris-darwinian/src/fitness/: calculator.rs  cohort.rs  mod.rs
crates/actoris-darwinian/src/telemetry/: mod.rs  questdb.rs
crates/actoris-ebpf/: Cargo.toml  build.rs
crates/actoris-ebpf/src/: main.rs
crates/actoris-onebill/: Cargo.toml
crates/actoris-onebill/src/: lib.rs
crates/actoris-onebill/src/billing/: invoice.rs  mod.rs  settlement.rs
crates/actoris-onebill/src/grpc/: mod.rs  service.rs
crates/actoris-onebill/src/metering/: aggregator.rs  collector.rs  mod.rs
crates/actoris-onebill/src/pricing/: cache.rs  engine.rs  formula.rs  mod.rs
crates/actoris-praxis/: Cargo.toml  Dockerfile  build.rs
crates/actoris-praxis/src/: config.rs  lib.rs  main.rs
crates/actoris-praxis/src/domain/: augmentation.rs  competence.rs  indexing.rs  memory.rs  mod.rs  retrieval.rs
crates/actoris-praxis/src/grpc/: mod.rs  service.rs
crates/actoris-praxis/src/infra/: embedding.rs  memory_store.rs  mod.rs
crates/actoris-protocol-dna/: Cargo.toml
crates/actoris-protocol-dna/src/: lib.rs
crates/actoris-protocol-dna/src/primitives/: delegate.rs  insure.rs  lend.rs  mod.rs  spawn.rs
crates/actoris-protocol-dna/src/wasm/: mod.rs  runtime.rs
crates/actoris-sidecar/: Cargo.toml
crates/actoris-sidecar/src/: main.rs  telemetry.rs
crates/actoris-sidecar/src/metering/: ebpf.rs  mod.rs
crates/actoris-sidecar/src/proxy/: attestation.rs  interceptor.rs  mod.rs
crates/actoris-trustledger/: Cargo.toml  build.rs
crates/actoris-trustledger/src/: lib.rs
crates/actoris-trustledger/src/consensus/: malachite.rs  mod.rs  oracle.rs  quorum.rs
crates/actoris-trustledger/src/grpc/: mod.rs  service.rs
crates/actoris-trustledger/src/ledger/: eventstore.rs  merkle_tree.rs  mod.rs
crates/actoris-trustledger/src/verification/: dna.rs  mod.rs  syra.rs  verifier.rs
deploy/: docker-compose.yml  prometheus.yml
deploy/helm/actoris/: Chart.yaml  values.yaml
deploy/helm/actoris/templates/: _helpers.tpl  identity-cloud-deployment.yaml  sidecar-daemonset.yaml  trustledger-deployment.yaml
docs/: actoris.txt
proto/: buf.yaml
proto/actoris/: common.proto  darwinian.proto  identity.proto  onebill.proto  trustledger.proto
proto/actoris/praxis/v1/: praxis.proto
services/identity-cloud/: go.mod
services/identity-cloud/cmd/server/: main.go
services/identity-cloud/internal/domain/: models.go
services/identity-cloud/internal/grpc/: server.go  types.go
services/identity-cloud/internal/repository/: neo4j.go
services/identity-cloud/internal/service/: identity_service.go
services/identity-cloud/pkg/config/: config.go
tests/: hsm_test.rs  integration_test.rs
ui/: .env.example  Dockerfile  package-lock.json  package.json  tailwind.config.js
ui-v2/: package-lock.json  package.json  tailwind.config.ts
ui-v2/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
ui-v2/src/app/billing/: page.tsx
ui-v2/src/app/darwinian/: page.tsx
ui-v2/src/app/identity/: page.tsx
ui-v2/src/app/ledger/: page.tsx
ui-v2/src/app/protocol/: page.tsx
ui-v2/src/components/: DemoToggle.tsx  Header.tsx  IntegrationModal.tsx
ui-v2/src/lib/: api.ts  demo-context.tsx  utils.ts
ui/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
ui/src/app/actions/: page.tsx
ui/src/app/agents/: page.tsx
ui/src/app/praxis/: page.tsx
ui/src/app/wallet/: page.tsx
ui/src/components/: AgentsList.tsx  QuickActions.tsx  RecentActions.tsx  ServiceStatus.tsx  StatsCards.tsx  TrustBadge.tsx
ui/src/components/praxis/: ActionAugmentation.tsx  LearningMetrics.tsx  MemoryCard.tsx  PraxisStats.tsx  ProceduralCompetence.tsx  RetrievalDemo.tsx  index.ts
ui/src/lib/: api.ts
