[package]
name = "actoris-common"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Shared types, errors, and crypto wrappers for Actoris Economic OS"

[dependencies]
# Async
tokio = { workspace = true }
async-trait = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
rkyv = { workspace = true }

# Crypto
frost-ed25519 = { workspace = true }
ed25519-dalek = { workspace = true }
blake3 = { workspace = true }
rand = { workspace = true }

# Utils
uuid = { workspace = true }
chrono = { workspace = true }
rust_decimal = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }
bytes = { workspace = true }
bs58 = { workspace = true }
bincode = { workspace = true }

# Observability
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
rust_decimal_macros = { workspace = true }
