[package]
name = "actoris-darwinian"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Darwinian - PID-controlled resource allocation engine for Actoris"

[dependencies]
# Workspace crates
actoris-common = { workspace = true }

# Async
tokio = { workspace = true }
async-trait = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# PID control
pid = { workspace = true }

# gRPC
tonic = { workspace = true }
prost = { workspace = true }

# Observability
tracing = { workspace = true }
prometheus = { workspace = true }

# Utils
uuid = { workspace = true }
chrono = { workspace = true }
rust_decimal = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
