[package]
name = "actoris-ebpf"
version = "0.1.0"
edition = "2021"
description = "ACTORIS eBPF programs for kernel-level metering"
license = "Apache-2.0"

[dependencies]
aya-ebpf = "0.1"
aya-log-ebpf = "0.1"

[[bin]]
name = "actoris-ebpf"
path = "src/main.rs"

[profile.dev]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = "abort"
incremental = false
codegen-units = 1
rpath = false

[profile.release]
lto = true
panic = "abort"
codegen-units = 1
