[package]
name = "actoris-onebill"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "OneBill - Pricing engine, metering, and billing for Actoris"

[dependencies]
# Workspace crates
actoris-common = { workspace = true }

# Async
tokio = { workspace = true }
async-trait = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Cache
redis = { workspace = true }

# Rules engine
zen-engine = { workspace = true }

# gRPC
tonic = { workspace = true }
prost = { workspace = true }

# Observability
tracing = { workspace = true }
prometheus = { workspace = true }

# Utils
uuid = { workspace = true }
chrono = { workspace = true }
rust_decimal = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
dashmap = { workspace = true }
blake3 = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
