[package]
name = "actoris-praxis"
description = "PRAXIS - Procedural Recall for Agents with eXperiences Indexed by State"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[[bin]]
name = "actoris-praxis"
path = "src/main.rs"

[dependencies]
actoris-common = { path = "../actoris-common" }

tokio = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
rust_decimal = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
config = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
async-trait = { workspace = true }
dashmap = { workspace = true }
parking_lot = { workspace = true }

# Additional dependencies
dotenvy = "0.15"
ordered-float = "4.2"
tokio-stream = { workspace = true }
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }

[dev-dependencies]
mockall = "0.12"
proptest = "1.4"

[build-dependencies]
tonic-build = { workspace = true }
