[package]
name = "actoris-sidecar"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Actoris Sidecar - Proxy with compute metering and attestation"

[[bin]]
name = "actoris-sidecar"
path = "src/main.rs"

[dependencies]
# Workspace crates
actoris-common = { workspace = true }

# Async
tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }

# HTTP
hyper = { version = "1.4", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
tower = { version = "0.4", features = ["full"] }
tower-service = "0.3"

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Crypto
ed25519-dalek = { workspace = true }
blake3 = { workspace = true }

# Messaging
async-nats = { workspace = true }

# Observability
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
prometheus = { workspace = true }
metrics = { workspace = true }

# Utils
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
base64 = { workspace = true }
bytes = { workspace = true }
parking_lot = { workspace = true }
dashmap = { workspace = true }

# Config
config = "0.13"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
